# autoanki

./: Cargo.toml  README.md
doc/: CHANGELOG.md
src/: anki.rs  cli.rs  config.rs  http.rs  main.rs
