[package]
name = "autoanki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic
anyhow = "1"
thiserror = "1"
crossbeam-channel = "0.5"
lazy_static = "1.4.0"

# CLI
clap = {version = "4.1.4", features = ["derive"]}

# HTML parser
nipper = "0.1.9"

# HTTP client
reqwest = "0.11.14"
