[package]
name = "autoanki"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "atak"

[dependencies]
# Basic
anyhow = "1"
thiserror = "1"
crossbeam-channel = "0.5"
lazy_static = "1.4.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"

# CLI
clap = {version = "4.1.4", features = ["derive"]}

# HTML parser
nipper = "0.1.9"

# HTTP CLIENT
reqwest = "0.11.14"
cookie = "0.17.0"

clipboard = "0.5.0"

tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"
select = "0.6.0"

once_cell = "1.17.1"

colored = "2.0.0"
